# vllm-agent-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  benchmarking.md  configuration.md  engineering-notes.md  migration-v0.2.md  production-security.md  roadmap.md  validated-profile-qwen36-5090.md
scripts/: capability_eval.py  load_smoke.py  torture.py
src/vllm_agent_gateway/: __init__.py  app.py  application.py  cli.py  config.py  document_service.py  errors.py
src/vllm_agent_gateway/adapters/: __init__.py  anthropic.py  common.py  gemini.py  gemini_stream.py  ollama.py  openai.py  paths.py
src/vllm_agent_gateway/documents/: __init__.py  exceptions.py  loader.py  models.py  pdf.py  url_security.py
src/vllm_agent_gateway/middleware/: __init__.py  _responses.py  authentication.py  body_limit.py  concurrency.py  rate_limit.py  request_context.py
src/vllm_agent_gateway/observability/: __init__.py  metrics.py  request_metrics.py
src/vllm_agent_gateway/proxy/: __init__.py  streaming.py  upstream.py
tests/: test_anthropic_adapter_v2.py  test_application_v2.py  test_cancellation_v2.py  test_capability_eval.py  test_config.py  test_document_security_v2.py  test_documents.py  test_gateway_controls_v2.py  test_gemini_protocol_v2.py  test_gemini_stream_v2.py  test_http_controls.py  test_ollama_protocol_v2.py  test_protocols.py  test_torture.py
